--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "puppeteer": "^19.7.2",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "puppeteer-extra-plugin-user-data-dir": "^2.4.1",
     "tslib": "^2.5.0"
   },
   "devDependencies": {
